refactor: Organize file structure
- Move converter to src/converter.py
- Move GUI to src/gui.py
- Move test generator to scripts/
- Delete unused test files
- Update imports and pyproject.toml
- Simplify README

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ dev = [
 ]
 
 [project.scripts]
-spass-convert = "samsung_pass_to_bitwarden:main"
-spass-gui = "gui:main"
+spass-convert = "src.converter:main"
+spass-gui = "src.gui:main"
 
 [tool.ruff]
 line-length = 100
